fixed button styling/alignment issue

--- a/src/css/eventcard.scss
+++ b/src/css/eventcard.scss
@@ -3,10 +3,15 @@
   padding: 16px 24px 16px 24px;
   background-color: #F7F6F3;
   font-size: 14px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card-header {
   font-family: 'IBM Plex Serif';
+  text-overflow: ellipsis;
   font-size: 18px;
   font-weight: 600;
 }
